[package]
name = "open-rdma-driver"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/datenlord/open-rdma-driver"
description = "A user space RDMA driver for BlueRDMA and its software protocol stack"
readme = "README.md"
license = "GPL 2.0"
keywords = ["rdma", "driver"]
categories = ["Command line utilities", "Hardware support"]

[features]
default = ["scheduler"]
scheduler = []

[dependencies]
thiserror = "1.0.56"
num_enum = "0.7.2"
socket2 = { version = "0.5.6", features = ["all"] }
crc32fast = "1.4.0"
bitflags = "2.4.2"
libc = "0.2"
rand = { version = "0.8.5", features = ["std", "std_rng"], default-features = false }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
bitfield = "0.14.0"
eui48 = "1.1.0"
log = {version = "0.4",  features = ["std"]}
serial_test = "3.0.0"
derive_builder = "0.20.0"
smoltcp = {version = "0.11.0", features = ["verbose"]}
parking_lot = "0.12.2"
flume = "0.11.0"


[dev-dependencies]
shared_memory = "0.12.4"
ctor = "0.2.7"
buddy_system_allocator = "0.9.1"
libc = "0.2.153"
lazy_static = "1.4.0"
serial_test = "3.0.0"


